# failure_on_the_fly

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.sandcastle/: CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  merge-prompt.md  review-prompt.md
config/: settings.py  urls.py
config/tests/: test_export_contract_documentation.py  test_startseite.py
docs/: open-questions.md  vision.md
docs/adr/: 0001-fehlermuster-als-einziger-oberbegriff.md  0002-training-und-erhebung-getrennt.md  0003-versionierte-artefakte-entwurf-final.md  0004-zentraler-fach-agnostischer-simulationskern.md  0005-denkspur-pro-antwort-und-ihre-sichtbarkeit.md  0006-pseudonymitaet-teilnahme-token-getrennt-vom-konto.md  0007-kein-audio-transkript-nicht-korrigierbar.md  0008-fragebogen-item-als-atomare-einheit.md  0009-diagnose-wird-erfasst-nicht-bewertet.md  0012-gespraechsbudget-unsichtbar-uhr-pausiert.md  (+20 more)
erhebungen/: __init__.py  ablauf.py  apps.py  export.py  models.py  prototyp_98.py  urls.py  views.py
fragebogen_items/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
konten/: __init__.py  apps.py  context_processors.py  models.py  navigation.py
seeds/: apps.py
simulation/: __init__.py  models.py  standardkern.py  urls.py  views.py
sitzungen/: __init__.py  apps.py  models.py  orchestrierung.py  rahmen.py  sink.py  urls.py  views.py
templates/: base.html  start.html
training/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
vignetten/: __init__.py  forms.py  models.py  urls.py  views.py
(+132 files in other folders)
