[project]
name = "failure-on-the-fly"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-htmx>=1.27.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py314"
